fix main overflow x scrolling

--- a/src/css/11_scaffolding.styl
+++ b/src/css/11_scaffolding.styl
@@ -15,6 +15,7 @@ body
 main
     absolute top bottom left right
     z-index 1
+    overflow hidden
     background $bg
 
 .empty-container
